--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,21 @@
     <string name="app_name">SportsApp</string>
 
     <string name="denied_toast">Приложению необходимо данное разрешение!</string>
+    <string name="interests_fan">Как болельщик</string>
+    <string name="interests_desc">Выбрать интересы можно потом\nв личном кабинете</string>
+    <string name="interests_next">Далее</string>
+    <string name="interests_tennis">Теннис</string>
+    <string name="interests_soccer">Футбол</string>
+    <string name="interests_hokey">Хоккей</string>
+    <string name="interests_basketball">Баскетбол</string>
+    <string name="interests_volleyball">Волейбол</string>
+    <string name="interests_running">Бег</string>
+    <string name="interests_bicycle">Велоспорт</string>
+    <string name="interests_strong">Силовой спорт</string>
+    <string name="interests_stretching">Стретчинг</string>
+    <string name="interests_sportsmen">Как спортсмен</string>
+    <string name="interests_title">Мои интересы</string>
+
     <string name="text_link">НАЖИМАЯ ДАЛЕЕ, ВЫ СОГЛАШАЕТЕСЬ С\n<a href="https://www.psbank.ru">ПОЛИТИКОЙ ОБРАБОТКИ ПЕРСОНАЛЬНЫХ ДАННЫХ</a></string>
     <string name="text_error">Проверьте правильность данных!</string>
     <string name="hint_id">Ваш ID</string>
