--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,13 @@
     <string name="interests_sportsmen">Как спортсмен</string>
     <string name="interests_title">Мои интересы</string>
 
-    <string name="text_link">НАЖИМАЯ ДАЛЕЕ, ВЫ СОГЛАШАЕТЕСЬ С\n<a href="https://www.psbank.ru">ПОЛИТИКОЙ ОБРАБОТКИ ПЕРСОНАЛЬНЫХ ДАННЫХ</a></string>
+    <string name="text_forgot">Забыли пароль?</string>
     <string name="text_error">Проверьте правильность данных!</string>
-    <string name="hint_id">Ваш ID</string>
+    <string name="hint_id">Ваш табельный номер</string>
     <string name="hint_password">Пароль</string>
-    <string name="button_next">Далее</string>
+    <string name="button_next">Далее ¬</string>
+
+    <string name="login_label">CПОРТ</string>
+    <string name="login_title">Добро пожаловать\nв ПСБ Спорт!</string>
+    <string name="login_next">Войти ¬</string>
 </resources>
