--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="denied_toast">Приложению необходимо данное разрешение!</string>
     <string name="interests_fan">Как болельщик</string>
-    <string name="interests_desc">Выбрать интересы можно потом\nв личном кабинете</string>
-    <string name="interests_next">Далее</string>
+    <string name="interests_desc">Выбрать/изменить интересы можно потом в личном кабинете приложения</string>
+    <string name="interests_next">Далее ¬</string>
     <string name="interests_tennis">Теннис</string>
     <string name="interests_soccer">Футбол</string>
     <string name="interests_hokey">Хоккей</string>
@@ -26,4 +26,10 @@
     <string name="login_label">CПОРТ</string>
     <string name="login_title">Добро пожаловать\nв ПСБ Спорт!</string>
     <string name="login_next">Войти ¬</string>
+
+    <string name="gadgets_title">Подключите ваше умное устройство к приложению</string>
+    <string name="gadgets_subtitle">Подключение умного устройства позволит начислять награждения за вашу физическую активность</string>
+    <string name="gadgets_button">Подключить!</string>
+    <string name="gadgets_desc">Выбрать/изменить интересы можно потом в личном кабинете приложения</string>
+    <string name="gadgets_next">Далее ¬</string>
 </resources>
