начал делать детальный ивент

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,9 @@
     <string name="events_more"><u>Подробнее</u></string>
     <string name="events_role_sport">ваша роль <b>спортсмен</b></string>
     <string name="events_role_fan">ваша роль <b>болельщик</b></string>
+
+    <string name="detail_chekin">Я на месте, регистрируюсь!</string>
+    <string name="detail_you_are_cancel">Отменить своё участие</string>
+    <string name="detail_you_are_sport">Вы зарегистрированны как спортсмен</string>
+    <string name="detail_you_are_fan">Вы зарегистрированны как болельщик</string>
 </resources>
