--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,9 +53,15 @@
 
     <string name="detail_chekin">Я на месте, регистрируюсь!</string>
     <string name="detail_register">Принять участие!</string>
+    <string name="detail_register_until">регистрация начнётся за 1 час</string>
     <string name="detail_you_are_cancel">Отменить своё участие</string>
     <string name="detail_you_are_sport">Вы зарегистрированны как <b>спортсмен</b></string>
     <string name="detail_you_are_fun">Вы зарегистрированны как <b>болельщик</b></string>
+    <string name="detail_plan">Запаланировать участие как</string>
+    <string name="detail_sport">Спортсмен</string>
+    <string name="detail_fun">Болельщик</string>
+    <string name="detail_sport_points">100 пульса</string>
+    <string name="detail_fun_points">50 пульса</string>
 
     <string name="qr_title">Сканирование QR-кода</string>
 
